Fix Twitter links to @AnonAntics

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,7 +19,7 @@ header_pages:
 
 # Social
 github_username: bad-antics
-twitter_username: badantics
+twitter_username: AnonAntics
 
 # Analytics (optional)
 google_analytics: 
